--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,12 @@
     max-width: 950px;
     margin: 0 auto;
 }
+
+
 @import "blocks/promo";
 @import "blocks/header";
 @import "blocks/buttons";
+@import "blocks/advantages";
+@import "blocks/consultation";
+@import "blocks/titles";
+@import "blocks/forms";
