--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -1,6 +1,6 @@
 .consultation {
     min-height: 680px;
-    background: url(../../img/bg2.jpg) center (center/cover) no-repeat;
+    background: url(../img/bg2.jpg) center (center/cover) no-repeat;
     padding: 100px 0 108px 0;
     &__descr {
         font-weight: 500;
