--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -21,4 +21,9 @@
         background: #C70101;
         font-size: 16px;
     }
+    &_mini {
+        width: 135px;
+        height: 44px;
+        font-size: 14px;
+    }
 }
