--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -1,6 +1,7 @@
 .catalog {
     min-width: 1103px;
     padding-bottom: 79px;
+
     &__tabs {
         margin-top: 63px;
         list-style-type: none;
@@ -8,6 +9,7 @@
         justify-content: center;
         align-items: center;
     }
+
     &__tab {
         width: 222px;
         height: 52px;
@@ -24,29 +26,36 @@
         margin-bottom: 0;
         padding-left: 0;
         transition: 0.5s all;
+
         &:hover {
             box-shadow: 3px 3px 20px $main-color;
             border: none;
         }
+
         cursor: pointer;
+
         div {
-            transform: skew(25deg);   
+            transform: skew(25deg);
         }
+
         &_active {
             background-color: $main-color;
             color: #FFFFFF;
             border: none;
         }
     }
+
     &__content {
         display: none;
         margin-top: 60px;
+
         &_active {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between; 
+            justify-content: space-between;
         }
     }
+
     &-item {
         margin-bottom: 19px;
         width: 303px;
@@ -54,12 +63,14 @@
         padding: 20px 20px 26px 20px;
         border: 2px solid #E8E8E8;
         overflow: hidden;
+
         &__img {
             display: block;
             margin: 0 auto;
             max-width: 100%;
             height: 200px;
         }
+
         &__subtitle {
             margin-top: 20px;
             font-weight: 700;
@@ -67,6 +78,7 @@
             text-align: center;
             color: #0D0D0D;
         }
+
         &__descr {
             margin-top: 16px;
             font-weight: 300;
@@ -75,53 +87,65 @@
             text-align: center;
             color: #0D0D0D;
         }
+
         &__link {
+            margin-top: 17px;
             display: block;
             font-weight: 500;
             font-size: 14px;
             text-align: center;
             text-decoration-line: underline;
+            text-transform: uppercase;
             color: $main-color;
+
             &:hover {
                 color: $main-color;
             }
         }
+
         hr {
             margin-top: 17px;
             margin-bottom: 21px;
             background: #E8E8E8;
             border-bottom: none;
         }
+
         &__footer {
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
+
         &__old-price {
             font-weight: 300;
             font-size: 14px;
             text-decoration-line: line-through;
             color: #555555;
         }
+
         &__price {
             font-weight: 700;
             font-size: 20px;
             color: #050505;
         }
+
         &__wrapper {
             display: flex;
             width: calc(200% + 40px);
         }
+
         &__content {
             width: 50%;
             margin-right: 0px;
             transform: translateX(-100%);
             transition: 0.5s all;
+
             &_active {
                 transform: translateX(0%);
                 margin-right: 20px;
             }
         }
+
         &__list {
             position: relative;
             width: 50%;
@@ -132,10 +156,12 @@
             padding-right: 20px;
             transition: 0.5s all;
             list-style-type: none;
+
             &_active {
                 transform: translateX(-100%);
                 margin-left: 0px;
             }
+
             li {
                 position: relative;
                 font-weight: 300;
@@ -143,6 +169,7 @@
                 line-height: 21px;
                 color: #555555;
                 margin-bottom: 20px;
+
                 &::before {
                     content: '';
                     position: absolute;
@@ -151,10 +178,10 @@
                     background-color: $main-color;
                     left: -14px;
                     top: 7px;
-
                 }
             }
         }
+
         &__back {
             position: absolute;
             bottom: 0;
@@ -165,11 +192,12 @@
             font-size: 14px;
             text-decoration: underline;
             color: $main-color;
+
             &:hover {
-                color: $main-color;  
+                color: $main-color;
             }
         }
     }
-   
-        
+
+
 }
