--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     width: 303px;
+
     input {
         height: 54px;
         border-radius: 5px;
@@ -14,8 +15,13 @@
         font-size: 14px;
         align-items: center;
         color: #4B4B4B;
+
         &:nth-child(3) {
             margin-bottom: 20px;
         }
+    }
+
+    &_mt25px {
+        margin-top: 25px;
     }
 }
