--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,9 @@
 @import 'base/variables';
+
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
+
 .container {
     max-width: 950px;
     margin: 0 auto;
@@ -17,3 +19,6 @@
 @import "blocks/forms";
 @import "blocks/carousel";
 @import "blocks/catalog";
+@import "blocks/reviews";
+@import "blocks/footer";
+@import "blocks/modal";
