--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -2,11 +2,23 @@
     min-height: 680px;
     background: url(../img/bg2.jpg) center (center/cover) no-repeat;
     padding: 100px 0 108px 0;
+
     &__descr {
         font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
-    align-items: flex-end;
-    color: #FFFFFF;
+        font-size: 20px;
+        line-height: 30px;
+        align-items: flex-end;
+        color: #FFFFFF;
+    }
+
+    .error {
+        border: 1px solid red;
+    }
+
+    label.error {
+        color: #FFFFFF;
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
     }
 }
