--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -1,28 +1,41 @@
 .advantages {
-    min-height: 473px; 
+    min-height: 473px;
     background: #F6F6F6;
     padding: 73px 0 65px 0;
+
     &__title {
         font-weight: 700;
         font-size: 30px;
         text-align: center;
         color: #0D0D0D;
     }
+
     &__wrapper {
         display: flex;
         justify-content: space-between;
         margin-top: 65px;
     }
+
     &__img {
         display: block;
         margin: 0 auto;
+
+        &_animated {
+            animation: heartbeat 1.5s ease infinite;
+
+            &:hover {
+                animation-play-state: paused;
+            }
+        }
     }
+
     &__item {
         display: flex;
         flex-direction: column;
         align-items: center;
         max-width: 238px;
     }
+
     &__subtitle {
         margin-top: 30px;
         font-weight: 700;
@@ -30,6 +43,7 @@
         text-align: center;
         color: #0D0D0D;
     }
+
     &__descr {
         margin-top: 30px;
         font-weight: 300;
@@ -37,14 +51,13 @@
         line-height: 18px;
         text-align: center;
         color: #0D0D0D;
+
         a {
             color: #ff0000;
             text-decoration: underline;
         }
     }
 
- 
-    
+
+
 }
-
-
