--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -53,4 +53,10 @@
             margin-right: 27px;
         }
     }
+
+    iframe {
+        width: 100%;
+        height: 630px;
+        border: none;
+    }
 }
