--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,11 @@
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/font';
+@import 'libs/slick';
+@import 'libs/animate.min';
+
 @import 'base/variables';
+@import 'base/animation';
+
 
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
@@ -22,3 +29,4 @@
 @import "blocks/reviews";
 @import "blocks/footer";
 @import "blocks/modal";
+@import "blocks/pageup";
